@@ -145,11 +145,9 @@ GEN    coltoalg(GEN nf,GEN x);
 GEN    get_arch_real(GEN nf,GEN x,GEN *emb,long prec);
 GEN    get_proj_modT(GEN basis, GEN T, GEN p);
 GEN    idealsqrtn(GEN nf, GEN x, GEN gn, int strict);
-GEN    init_unif_mod_fZ(GEN L);
 GEN    make_integral(GEN nf, GEN L0, GEN f, GEN listpr);
 GEN    pidealprimeinv(GEN nf, GEN x);
 GEN    rnfallbase(GEN nf, GEN *ppol, GEN *pD, GEN *pd, GEN *pfi);
 GEN    subgroupcondlist(GEN cyc, GEN bound, GEN listKer);
-GEN    unif_mod_fZ(GEN pr, GEN F);
 GEN    ideallog_sgn(GEN nf, GEN x, GEN sgn, GEN bid);
 GEN    zlog_units(GEN nf, GEN U, GEN sgnU, GEN bid);
