@@ -1,6 +1,6 @@
 3
 [23/2, [6, 1/2]~]
-[-23/2, 0]~
+-23/2
 [0, 0]
   ***   at top-level: idealtwoelt(K,[;],1)
   ***                 ^--------------------
